// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PolicySetApi createPolicySet() 1: Create non-existing policy set [FrodoTestPolicySet2] 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1696104734415,
  "description": "Frodo Test Policy Set Template",
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1696104734415,
  "name": "FrodoTestPolicySet2",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetApi createPolicySet() 2: Create existing policy set [FrodoTestPolicySet3] 1`] = `
{
  "code": 409,
  "message": "Application already exists",
  "reason": "Conflict",
}
`;

exports[`PolicySetApi deletePolicySet() 1: Delete existing policy set [FrodoTestPolicySet6] 1`] = `{}`;

exports[`PolicySetApi deletePolicySet() 2: Delete non-existing policy set [DoesNotExist] 1`] = `
{
  "code": 404,
  "message": "DoesNotExist application not found in realm.",
  "reason": "Not Found",
}
`;

exports[`PolicySetApi getPolicySet() 1: Get existing policy set [FrodoTestPolicySet1] 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1696104733520,
  "description": "Frodo Test Policy Set Template",
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1696104733520,
  "name": "FrodoTestPolicySet1",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetApi getPolicySet() 2: Get non-existing policy set by uuid [DoesNotExist] 1`] = `
{
  "code": 404,
  "message": "Unable to retrieve application under realm /alpha.",
  "reason": "Not Found",
}
`;

exports[`PolicySetApi getPolicySets() 1: Get all policy sets 1`] = `
{
  "pagedResultsCookie": null,
  "remainingPagedResults": 0,
  "result": [
    {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "AMIdentityMembership",
        "AND",
        "AuthLevel",
        "AuthScheme",
        "AuthenticateToRealm",
        "AuthenticateToService",
        "IPv4",
        "IPv6",
        "LDAPFilter",
        "LEAuthLevel",
        "NOT",
        "OAuth2Scope",
        "OR",
        "Policy",
        "ResourceEnvIP",
        "Script",
        "Session",
        "SessionProperty",
        "SimpleTime",
        "Transaction",
      ],
      "createdBy": "id=8efaa5b6-8c98-4489-9b21-ee41f5589ab7,ou=user,ou=am-config",
      "creationDate": 1695912757709,
      "description": null,
      "displayName": "FeatureStorePolicySet",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=8efaa5b6-8c98-4489-9b21-ee41f5589ab7,ou=user,ou=am-config",
      "lastModifiedDate": 1695912757709,
      "name": "FeatureStorePolicySet",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AND",
        "AuthenticatedUsers",
        "Identity",
        "JwtClaim",
        "NONE",
        "NOT",
        "OR",
        "Policy",
      ],
    },
    {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696104733520,
      "description": "Frodo Test Policy Set Template",
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696104733520,
      "name": "FrodoTestPolicySet1",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696104733728,
      "description": "Frodo Test Policy Set Template",
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696104733728,
      "name": "FrodoTestPolicySet3",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696104733879,
      "description": "Frodo Test Policy Set Template",
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696104733879,
      "name": "FrodoTestPolicySet4",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "Script",
        "AMIdentityMembership",
        "IPv6",
        "IPv4",
        "SimpleTime",
        "LEAuthLevel",
        "LDAPFilter",
        "AuthScheme",
        "Session",
        "AND",
        "AuthenticateToRealm",
        "ResourceEnvIP",
        "Policy",
        "OAuth2Scope",
        "SessionProperty",
        "OR",
        "Transaction",
        "NOT",
        "AuthLevel",
        "AuthenticateToService",
      ],
      "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "creationDate": 1696104734076,
      "description": "Frodo Test Policy Set Template",
      "displayName": "Frodo Test Policy Set Template",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1696104734076,
      "name": "FrodoTestPolicySet6",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AuthenticatedUsers",
        "NOT",
        "Identity",
        "OR",
        "AND",
        "NONE",
        "Policy",
        "JwtClaim",
      ],
    },
    {
      "applicationType": "iPlanetAMWebAgentService",
      "attributeNames": [],
      "conditions": [
        "AMIdentityMembership",
        "AND",
        "AuthLevel",
        "AuthScheme",
        "AuthenticateToRealm",
        "AuthenticateToService",
        "IPv4",
        "IPv6",
        "LDAPFilter",
        "LEAuthLevel",
        "NOT",
        "OAuth2Scope",
        "OR",
        "Policy",
        "ResourceEnvIP",
        "Script",
        "Session",
        "SessionProperty",
        "SimpleTime",
        "Transaction",
      ],
      "createdBy": "id=fbdeb2a9-beb6-4a14-ae66-e35f16ce421d,ou=user,ou=am-config",
      "creationDate": 1693494279401,
      "description": "Test Policy Set Description",
      "displayName": "Test Policy Set",
      "editable": true,
      "entitlementCombiner": "DenyOverride",
      "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
      "lastModifiedDate": 1693495339089,
      "name": "test-policy-set",
      "resourceComparator": null,
      "resourceTypeUuids": [
        "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
      ],
      "saveIndex": null,
      "searchIndex": null,
      "subjects": [
        "AND",
        "AuthenticatedUsers",
        "Identity",
        "JwtClaim",
        "NONE",
        "NOT",
        "OR",
        "Policy",
      ],
    },
  ],
  "resultCount": 6,
  "totalPagedResults": -1,
  "totalPagedResultsPolicy": "NONE",
}
`;

exports[`PolicySetApi updatePolicySet() 1: Update existing policy set [FrodoTestPolicySet4] 1`] = `
{
  "applicationType": "iPlanetAMWebAgentService",
  "attributeNames": [],
  "conditions": [
    "Script",
    "AMIdentityMembership",
    "IPv6",
    "IPv4",
    "SimpleTime",
    "LEAuthLevel",
    "LDAPFilter",
    "AuthScheme",
    "Session",
    "AND",
    "AuthenticateToRealm",
    "ResourceEnvIP",
    "Policy",
    "OAuth2Scope",
    "SessionProperty",
    "OR",
    "Transaction",
    "NOT",
    "AuthLevel",
    "AuthenticateToService",
  ],
  "createdBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "creationDate": 1696104733879,
  "description": "Frodo Test Policy Set Template",
  "displayName": "Frodo Test Policy Set Template",
  "editable": true,
  "entitlementCombiner": "DenyOverride",
  "lastModifiedBy": "id=b672336b-41ef-428d-ae4a-e0c082875377,ou=user,ou=am-config",
  "lastModifiedDate": 1696104734581,
  "name": "FrodoTestPolicySet4",
  "resourceComparator": null,
  "resourceTypeUuids": [
    "76656a38-5f8e-401b-83aa-4ccb74ce88d2",
  ],
  "saveIndex": null,
  "searchIndex": null,
  "subjects": [
    "AuthenticatedUsers",
    "NOT",
    "Identity",
    "OR",
    "AND",
    "NONE",
    "Policy",
    "JwtClaim",
  ],
}
`;

exports[`PolicySetApi updatePolicySet() 2: Update non-existing policy set [FrodoTestPolicySet5] 1`] = `
{
  "code": 404,
  "message": "FrodoTestPolicySet5 not found.",
  "reason": "Not Found",
}
`;
